2014-09-21 新增代码：提供RSS功能

--- a/_posts/2014-09/2014-09-12-Kunming-travel.html
+++ b/_posts/2014-09/2014-09-12-Kunming-travel.html
@@ -4,6 +4,7 @@ title: 昆明之行
 categories: [生活]
 tags: [学术会议, 旅行]
 icon: plane
+<!-- excerpt: <p class="paragraph">目前为止到过的中国最西的地方</p> -->
 ---
 <p class="paragraph">
   终于获得一次目的地不是通辽而且和863项目无关的出差机会，目的地是美丽的春城昆明。在此之前我在国内到过的最西的地方是2007年夏天大一暑期实践去的湖北宜昌。
