--- a/about.html
+++ b/about.html
@@ -13,6 +13,13 @@ index: 4
   <p class="about">
     THU EEA 
   </p>
+  <p class="about">
+	订阅本博客到鲜果
+<a target="_blank" title="订阅到鲜果 RSS阅读器" href="http://xianguo.com/subscribe?url=http%3A%2F%2Ftommyjiang.github.com%2F"><img src="http://static.xgres.com/static/images/sub/sub_XianGuo_02.gif" border="0" alt="鲜果阅读器订阅图标" /></a>
+  </p>
+  <p class="about">
+  本博客RSS订阅地址：http://tommyjiang.github.com/feed.xml
+  </p>
   <h2>
     链接
   </h2>
